<resources>
    <string name="app_name">Real Estate Manager</string>

    //General
    <string name="yes">Yes !</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="or"> or </string>
    <string name="notificationChannel" translatable="false">notificationChannel</string>
    <string name="noConnection">You are not connected to internet</string>
    <string name="noGPS">You have no GPS signal or your geolocation feature is not active</string>
    <string name="and">and</string>


    //NewProperty
    <string name="address">Property Address</string>
    <string name="address_hint">address</string>
    <string name="surface">Surface and Rooms</string>
    <string name="m2">m²</string>
    <string name="price">Price</string>
    <string name="description">Property Description</string>
    <string name="description_hint">description</string>
    <string name="type">Property Type</string>
    <string name="house">House</string>
    <string name="condo">Condo</string>
    <string name="land">Land</string>
    <string name="asset">Asset of the Property</string>
    <string name="cellar">Cellar</string>
    <string name="parking">Parking</string>
    <string name="garage">Garage</string>
    <string name="garden">Garden</string>
    <string name="view">View</string>
    <string name="balcony">Balcony/Terrace</string>
    <string name="pool">Swimming Pool</string>
    <string name="elevator">Elevator</string>
    <string name="interest">Point of Interest</string>
    <string name="school">School</string>
    <string name="bar">Bar</string>
    <string name="commerce">Local Commerce</string>
    <string name="park">Park</string>
    <string name="transport">Public Transport</string>
    <string name="culture">Cultural Places</string>
    <string name="add_photo_title">Adding or Deleting Photos</string>
    <string name="add_video_title">Adding or Deleting Videos</string>
    <string name="from_gallery">Select photos from gallery</string>
    <string name="video_gallery">Select videos from gallery</string>
    <string name="shoot_photo">Shoot a photo</string>
    <string name="photo_message">With which method do you want to add photos</string>
    <string name="add_photo">ADD/DELETE \n PHOTOS</string>
    <string name="add_video">ADD/DELETE\nVIDEO</string>
    <string name="validation_button">VALIDATE</string>
    <string name="title_property_list">Properties</string>
    <string name="title_property_detail">Property Detail</string>
    <string name="title_activity_maps">Map</string>
    <string name="dollar">$</string>
    <string name="sold">Is it sold ?</string>
    <string name="title_alertDialog">Creation/Update of propriety</string>
    <string name="enter_name">Enter the name of Agent</string>
    <string name="enter_name_error">You have to give your name</string>
    <string name="photo_error">You have to add at least one photo</string>
    <string name="image_description">Add a short description for each images</string>
    <string name="delete_photo">Delete Photos</string>
    <string name="delete_video">Delete Videos</string>
    <string name="agent">Real Estate Agent:</string>

    //Loaning
    <string name="amount">Amount of your loan</string>
    <string name="down">Down payment</string>
    <string name="duration">Duration of your loan in years :</string>
    <string name="rate">Rate of your loan</string>
    <string name="calculate">calculate your monthly payments</string>
    <string name="total_coast">You will pay in total :</string>
    <string name="monthly_coast">You will pay per month :</string>
    <string name="no_result">we can/t give you a result if the amount or the rate is empty</string>

    //Filter
    <string name="surface_between">Surface</string>
    <string name="min_room">Minimum Room and Bedroom</string>
    <string name="filter">Filter</string>
    <string name="filter_title">Filter Properties</string>
    <string name="no_filter">Reset Filter</string>
    <string name="hide_sold">Hide sold properties</string>
    <string name="show_sold">Show only sold properties</string>

    //Notification
    <string name="channel_description">Notification channel</string>
    <string name="channel_name">Real Estate channel</string>
    <string name="notification_title">New Property Add</string>
    <string name="notification_body">New property added with success !</string>
    <string name="room">rooms</string>

    //Menu
    <string name="menu_map">Map</string>
    <string name="menu_loan">Loaning</string>
    <string name="menu_new_property">Create A New Property</string>
    <string name="menu_settings">Settings</string>

    //Content Description
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
