<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loan.LoaningActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_amount"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_amount"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue"
            android:hint="@string/amount" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_down"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_amount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_down"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue"
            android:hint="@string/down" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInput_rate"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput_down">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editText_rate"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue"
            android:hint="@string/rate" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/duration"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInput_rate" />

    <TextView
        android:id="@+id/textView_progress_seekBar"
        style="@style/title_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"

        app:layout_constraintBottom_toBottomOf="@+id/textView_duration"
        app:layout_constraintStart_toEndOf="@+id/textView_duration"
        app:layout_constraintTop_toTopOf="@+id/textView_duration" />

    <SeekBar
        android:id="@+id/seekBar_years"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="30"
        android:progress="1"
        android:layout_margin="25dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_progress_seekBar" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/calculate"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_no_result" />

    <TextView
        android:id="@+id/textView_total_coast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        style="@style/title_string"
        android:text="@string/total_coast"
        android:visibility="gone"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_calculate"
        />

    <TextView
        android:id="@+id/textView_total_coast_empty_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="15dp"
        style="@style/title_string"
        android:textColor="@color/red"
        android:visibility="gone"

        app:layout_constraintStart_toEndOf="@id/textView_total_coast"
        app:layout_constraintTop_toBottomOf="@id/button_calculate"
        />

    <TextView
        android:id="@+id/textView_monthly_coast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        style="@style/title_string"
        android:text="@string/monthly_coast"
        android:visibility="gone"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_total_coast"
        />

    <TextView
        android:id="@+id/textView_monthly_coast_empty_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        style="@style/title_string"
        android:textColor="@color/red"
        android:visibility="gone"

        app:layout_constraintStart_toEndOf="@id/textView_monthly_coast"
        app:layout_constraintTop_toBottomOf="@id/textView_total_coast"
        />

    <TextView
        android:id="@+id/textView_no_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:visibility="gone"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_years" />


</androidx.constraintlayout.widget.ConstraintLayout>